[WIP] M2: import/export from csv
